in the middle of changes commit 6